--- a/index.html
+++ b/index.html
@@ -21,12 +21,9 @@
 
   <h3>Education</h3>
   <ul>
-    <li>Little Lilly's Public School</li>
-    <li>Shree Kumarans Childrens Home Education Council</li>
-    <li>Wigmore Primary School</li>
-    <li>National Public School</li>
-    <li><a href="https://www.thesamhitaacademy.com/">The Samhita Academy</a></li>
-    <li>Neharu Smaraka Vidyalaya</li>
+    <li>School 1</li>
+    <li><a href="https://www.thesamhitaacademy.com/">School 2</a></li>
+    <li>School 3</li>
   </ul>
   <hr>
 
@@ -54,19 +51,19 @@
   <h3>Skills</h3>
   <table cellspacing="10">
     <tr>
-      <td>Python</td>
+      <td>Skill 1</td>
       <td> ⭐⭐⭐</td>
     </tr>
     <tr>
-      <td>MySQl</td>
+      <td>Skill 2</td>
       <td>⭐⭐⭐⭐</td>
     </tr>
     <tr>
-      <td>Art</td>
-      <td>⭐⭐</td>
+      <td>Skill 3</td>
+      <td>⭐⭐⭐⭐⭐</td>
     </tr>
     <tr>
-      <td>Basketball</td>
+      <td>Skill 4</td>
       <td> ⭐⭐⭐</td>
     </tr>
   </table>
