--- a/contact.html
+++ b/contact.html
@@ -17,6 +17,8 @@
     <input type="text" name="yourName" value=""><br>
     <label>Your Email:</label>
     <input type="email" name="yourEmail" value=""><br>
+    <label>Your Date of Birth:</label>
+    <input type="date" name="yourDOB" value=""><br>
     <label>Your Message:</label><br>
     <textarea name="yourMessage" rows="10" cols="30"></textarea><br>
     <input type="submit" name="">
